--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,3 +7,35 @@
 
 // Bootstrap
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
+
+.easy-autocomplete
+{
+    display: inline-block;
+    position:relative;
+    margin:0;
+    padding:0;
+}
+
+.easy-autocomplete-container
+{
+    position:absolute;
+    background: #fff;
+    width: 100%;
+    
+    ul
+    {
+        list-style-type: none;
+        padding:1ex;
+        margin:0;
+        display:none;
+
+        li:hover{
+            background-color: $input-border-focus;
+        }
+        
+        :hover
+        {
+            cursor: pointer;
+        }
+    }
+}
