--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -21,7 +21,8 @@
     position:absolute;
     background: #fff;
     width: 100%;
-    
+    z-index:1000;
+
     ul
     {
         list-style-type: none;
@@ -32,9 +33,9 @@
         li:hover{
             background-color: $input-border-focus;
         }
-        
+
         :hover
-        {
+            {
             cursor: pointer;
         }
     }
