Changement d'interface, chargement si utile par menu

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -40,3 +40,24 @@
         }
     }
 }
+
+#menu-relations
+{
+    ul li a{
+        padding: 0;
+    }
+}
+
+.show-relation
+{
+    h1
+    {
+        font-size: x-large;
+        font-style: italic;
+    }
+
+    h2
+    {
+        font-size: large;
+    }
+}
